--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Template for a multi-page Vue app",
   "version": "0.2.0",
   "author": "MichaelCurrin",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
