--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "version": "npm run build",
+    "postversion": "git push --follow-tags"
   },
   "dependencies": {
     "core-js": "^3.6.5",
